2009-02-02  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Removed an unneccesary "k"
	character on top of file.

2009-01-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* godmode/agentes/module_manager_editor_wmi.php: Fixed two bugs; the
	  first one made the module_type 'generic_data' appear twice, the
	  second one didn't show the correct 'generic_data' when selecting a
	  prebuild WMI component.

2009-01-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/functions.php, operation/agentes/sla_view.php,
	  operation/agentes/ver_agente.php,
	  operation/reporting/reporting_xml.php,
	  operation/reporting/reporting_viewer.php: Fixed typo.

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated PO template.

2009-01-22  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation, fixed typos.

	* include/languages/index.pot: Updated po template.

	* include/help/en/help_wmiquery.php,
	  include/help/en/help_postprocess.php,
	  include/help/en/help_prediction_source_module.php,
	  include/help/en/help_date_format.php,
	  include/help/en/help_planned_downtime.php,
	  include/help/en/help_recontask.php,
	  include/help/en/help_alerts.php,
	  include/help/en/help_tcp_send.php,
	  include/help/en/help_manage_alerts.php,
	  include/help/en/help_plugin_definition.php,
	  include/help/en/help_manageconfig.php,
	  include/help/es/help_plugin_parameters.php,
	  include/help/es/help_module_definition.php,
	  include/help/es/help_network_component.php: Modified HTML tags,
	  fixed typos.

	* include/help/es/help_postprocess.php,
	  include/help/es/help_prediction_source_module.php,
	  include/help/es/help_date_format.php,
	  include/help/es/help_planned_downtime.php,
	  include/help/es/help_recontask.php,
	  include/help/es/help_alerts.php,
	  include/help/es/help_snmpwalk.php,